[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard-client"
version = "0.1.0"
description = "Python SDK for AgentGuard — secure API calls for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Mohammad Nawaf", email = "m7md.nawaf77@icloud.com"}
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://agent-guard.dev"
Repository = "https://github.com/mohnawaf77/Agent-Guard-SDK"